[dyad] Translated tutorial to Spanish - wrote 1 file(s)

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -870,38 +870,38 @@
     "delete_error_title": "Fallo al Eliminar"
   },
   "tutorial": {
-    "welcome_title": "Welcome to Calorel!",
-    "welcome_content": "Let's take a quick tour of the main features to start your health journey.",
-    "carousel_title": "Your Daily Summary",
-    "carousel_content": "Here you will find your daily progress for calories, macros, and other key metrics. Swipe to see more details!",
-    "scanner_title": "Log Everything Easily",
-    "scanner_content": "Tap the center button to open the menu. You can scan your food with AI, log an exercise, or add entries manually.",
-    "progress_title": "Track Your Progress",
-    "progress_content": "Visit the Progress tab to see your weight evolution, BMI, and track your daily streaks.",
-    "profile_title": "Your Profile",
-    "profile_content": "The Profile tab is your personal space. Here you can edit your details, manage goals, and configure app settings.",
-    "finish": "Finish",
-    "next": "Next"
+    "welcome_title": "¡Bienvenido a Calorel!",
+    "welcome_content": "Hagamos un recorrido rápido por las funciones principales para comenzar tu viaje de salud.",
+    "carousel_title": "Tu Resumen Diario",
+    "carousel_content": "Aquí encontrarás tu progreso diario de calorías, macros y otras métricas clave. ¡Desliza para ver más detalles!",
+    "scanner_title": "Registra Todo Fácilmente",
+    "scanner_content": "Toca el botón central para abrir el menú. Puedes escanear tu comida con IA, registrar ejercicio o añadir entradas manualmente.",
+    "progress_title": "Sigue tu Progreso",
+    "progress_content": "Visita la pestaña Progreso para ver la evolución de tu peso, IMC y seguir tus rachas diarias.",
+    "profile_title": "Tu Perfil",
+    "profile_content": "La pestaña Perfil es tu espacio personal. Aquí puedes editar tus datos, gestionar objetivos y configurar la app.",
+    "finish": "Finalizar",
+    "next": "Siguiente"
   },
   "notifications": {
-    "title": "Stay Consistent",
-    "description": "Turn on notifications to get reminders for meals, hydration, and weight checks. It helps you stay on track!",
-    "enable_button": "Enable Notifications",
-    "skip_button": "Maybe Later",
-    "breakfast_title": "Good Morning",
-    "breakfast_body": "Start your day by logging your breakfast.",
-    "food_title": "Lunch Time",
-    "food_body_1": "What's for lunch? Log it now.",
-    "dinner_title_1": "Dinner Time",
-    "dinner_body_1": "Don't forget to log your last meal.",
-    "snack_title": "Snack Time",
-    "snack_body": "Quick break, log your snack.",
-    "water_title_1": "Hydration",
-    "water_body_1": "Your body needs water. Drink a glass!",
-    "water_title_2": "Healthy Habit",
-    "water_body_2": "Stay hydrated for better results.",
-    "weight_title_1": "Weight Control",
-    "weight_body_1": "Update your weight today to see your progress."
+    "title": "Mantén la Constancia",
+    "description": "Activa las notificaciones para recibir recordatorios de comidas, hidratación y control de peso. ¡Te ayudará a no perder el ritmo!",
+    "enable_button": "Activar Notificaciones",
+    "skip_button": "Quizás más tarde",
+    "breakfast_title": "Buenos Días",
+    "breakfast_body": "Empieza el día registrando tu desayuno.",
+    "food_title": "Hora del Almuerzo",
+    "food_body_1": "¿Qué hay de almuerzo? Regístralo ahora.",
+    "dinner_title_1": "Hora de la Cena",
+    "dinner_body_1": "No olvides registrar tu última comida.",
+    "snack_title": "Hora del Snack",
+    "snack_body": "Pausa rápida, registra tu snack.",
+    "water_title_1": "Hidratación",
+    "water_body_1": "Tu cuerpo necesita agua. ¡Bebe un vaso!",
+    "water_title_2": "Hábito Saludable",
+    "water_body_2": "Mantente hidratado para mejores resultados.",
+    "weight_title_1": "Control de Peso",
+    "weight_body_1": "Actualiza tu peso hoy para ver tu progreso."
   },
   "subscribe": {
     "title": "Desbloquea Tu Potencial",
